# TecFlixx

./: Application.cpp  Application.h  CMakeLists.txt  Info.cpp  Info.h  List.cpp  List.h  Movie.cpp  Movie.h  Node.cpp  Node.h  Paginacion.cpp  Paginacion.h  README.md  Window.cpp  Window.h  main.cpp
exportToHTML/: .gitignore.html  Application.cpp.html  Application.h.html  CMakeCCompiler.cmake.html  CMakeCCompilerId.c.html  CMakeCXXCompiler.cmake.html  CMakeCXXCompilerId.cpp.html  CMakeCache.txt.html  CMakeDirectoryInformation.cmake.html  CMakeLists.txt.html  CMakeOutput.log.html  CMakeSystem.cmake.html  CXX.includecache.html  DependInfo.cmake.html  Info.cpp.html  Info.h.html  List.cpp.html  List.h.html  Makefile.cmake.html  Makefile.html  Makefile2.html  Movie.cpp.html  Movie.h.html  Node.cpp.html  Node.h.html  README.md.html  TargetDirectories.txt.html  TecFlix.cbp.html  TecFlix.iml.html  build.make.html  clion-environment.txt.html  clion-log.txt.html  cmake_clean.cmake.html  cmake_install.cmake.html  depend.internal.html  depend.make.html  feature_tests.c.html  feature_tests.cxx.html  flags.make.html  index.html  (+7 more)
